JumpScript/tests/baselines/reference/unusedLocalsAndParametersTypeAliases2.errors.txt
tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.jump(2,6): error TS6133: 'handler1' is declared but its value is never read.
tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.jump(5,10): error TS6133: 'foo' is declared but its value is never read.
tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.jump(6,10): error TS6133: 'handler2' is declared but its value is never read.


==== tests/cases/compiler/unusedLocalsAndParametersTypeAliases2.jump (3 errors) ====
    // unused
    type handler1 = () => void;
         ~~~~~~~~
!!! error TS6133: 'handler1' is declared but its value is never read.
    
    
    function foo() {
             ~~~
!!! error TS6133: 'foo' is declared but its value is never read.
        type handler2 = () => void;
             ~~~~~~~~
!!! error TS6133: 'handler2' is declared but its value is never read.
        foo();
    }
    
    export {}